# moodleappWindows

./: .gitignore  README.md
.github/workflows/: windows-app-release.yml
windows-app/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
windows-app/src/: index.html  styles.scss
windows-app/src-tauri/: Cargo.toml  tauri.conf.json
windows-app/src-tauri/capabilities/: default.json
windows-app/src-tauri/icons/: icon.icns
windows-app/src-tauri/src/: commands.rs  lib.rs  main.rs
windows-app/src/app/: app.component.ts  app.config.ts  app.routes.ts
windows-app/src/app/core/guards/: auth.guard.ts
windows-app/src/app/core/interceptors/: auth.interceptor.ts
windows-app/src/app/core/models/: calendar-event.model.ts  course.model.ts  grade.model.ts  message.model.ts  notification.model.ts  profile.model.ts  user.model.ts
windows-app/src/app/core/services/: assignment.service.ts  auth.service.ts  calendar.service.ts  course.service.ts  downloaded-files.service.ts  file-download.service.ts  file-upload.service.ts  forum.service.ts  grade.service.ts  message.service.ts  moodle-api.service.ts  notification.service.ts  offline-cache.service.ts  quiz-question-engine.ts  quiz.service.ts  storage.service.ts  theme.service.ts  update.service.ts  user-profile.service.ts
windows-app/src/app/features/activity/: activity-viewer.component.html  activity-viewer.component.scss  (+1 more)
windows-app/src/environments/: environment.prod.ts  environment.ts
windows-app/src/styles/: _animations.scss  _fluent.scss  _layout.scss  _variables.scss
(+49 files in other folders)
