[package]
name = "moodle-desktop"
version = "1.2.5"
description = "Moodle Desktop App for Windows"
authors = ["Moodle Desktop Team"]
edition = "2021"

[lib]
name = "moodle_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.5"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
